Add s3 CSI driver
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -1103,6 +1103,16 @@ network_monitoring_check_unschedulable_nodes: "true"
 network_monitoring_check_interval: "1m"
 network_monitoring_separate_prometheus: "false"
 
+# Enable/Disable the s3-csi-driver daemonset:
+# https://github.com/awslabs/mountpoint-s3-csi-driver
+s3_csi_driver: "false"
+# When set to true this will add a node-selector `s3-csi-driver: enabled` to the
+# s3-csi-driver daemonset such that only node/node-pools with that label will
+# have the driver running. This allows enabling in a subset of a cluster for
+# testing.
+s3_csi_driver_node_selector_restricted: "true"
+
+
 # Percent of master node instance memory to allocate to the kube-apiserver
 # container. If this value is non-zero it will set the memory limit for the
 # kube-apiserver container in the kube-apiserver pod.
