Allow higher memory limit for flannel and kube-proxy
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -402,16 +402,19 @@ node_exporter_experimental_metrics: "false"
 
 # kube-proxy settings
 kube_proxy_cpu: "50m"
-kube_proxy_memory: "200Mi"
+kube_proxy_memory_request: "200Mi"
+kube_proxy_memory_limit: "200Mi"
 kube_proxy_sync_period: "15m0s"
 kube_proxy_verbose_level: "2"
 
 # flannel settings
 flannel_cpu: "25m"
-flannel_memory: "100Mi"
+flannel_memory_request: "100Mi"
+flannel_memory_limit: "100Mi"
 
 flannel_awaiter_cpu: "25m"
-flannel_awaiter_memory: "50Mi"
+flannel_awaiter_memory_request: "50Mi"
+flannel_awaiter_memory_limit: "50Mi"
 
 # nvidia device plugin
 nvidia_device_plugin_cpu: "10m"
