--- a/cluster/manifests/kube-proxy/daemonset.yaml
+++ b/cluster/manifests/kube-proxy/daemonset.yaml
@@ -60,11 +60,11 @@ spec:
         resources:
           requests:
             cpu: {{.Cluster.ConfigItems.kube_proxy_cpu}}
-            memory: {{.Cluster.ConfigItems.kube_proxy_memory}}
+            memory: {{.Cluster.ConfigItems.kube_proxy_memory_request}}
             ephemeral-storage: 256Mi
           limits:
             cpu: {{.Cluster.ConfigItems.kube_proxy_cpu}}
-            memory: {{.Cluster.ConfigItems.kube_proxy_memory}}
+            memory: {{.Cluster.ConfigItems.kube_proxy_memory_limit}}
         volumeMounts:
         - name: kube-api-token
           mountPath: /var/run/secrets/kubernetes.io/serviceaccount
