--- a/cluster/node-pools/worker-splitaz/userdata.yaml
+++ b/cluster/node-pools/worker-splitaz/userdata.yaml
@@ -47,8 +47,8 @@ write_files:
                - --cluster-name
                - "{{.Cluster.ID}}"
                - --network-plugin=cni
-               - --cni-config-dir
-               - --cni-bin-dir
+               - --cni-conf-dir=/etc/cni/net.d
+               - --cni-bin-dir=/opt/cni/bin
       contexts:
       - context:
           cluster: local
