Exclude *5d.large instances in karpenter
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/cluster/node-pools/worker-karpenter/provisioners.yaml
+++ b/cluster/node-pools/worker-karpenter/provisioners.yaml
@@ -164,6 +164,8 @@ spec:
           operator: "NotIn"
           values:
             - "c5d.large"
+            - "m5d.large"
+            - "r5d.large"
 #{{ else }}
         - key: "node.kubernetes.io/instance-type"
           operator: In
