--- a/cluster/manifests/02-admission-control/teapot.yaml
+++ b/cluster/manifests/02-admission-control/teapot.yaml
@@ -418,7 +418,7 @@ webhooks:
     sideEffects: "NoneOnDryRun"
     matchPolicy: Equivalent
     rules:
-      - operations: [ "DELETE" ]
+      - operations: [ "CREATE", "DELETE" ]
         apiGroups: [""]
         apiVersions: ["v1"]
         resources: ["namespaces"]
