Make kube-node-ready optional
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/cluster/manifests/deletions.yaml
+++ b/cluster/manifests/deletions.yaml
@@ -309,3 +309,14 @@ post_apply:
   kind: DaemonSet
   namespace: kube-system
 {{- end }}
+{{- if ne .Cluster.ConfigItems.kube_node_ready_enabled "true" }}
+- name: kube-node-ready
+  kind: DaemonSet
+  namespace: kube-system
+- name: kube-node-ready
+  kind: ServiceAccount
+  namespace: kube-system
+- name: kube-node-ready
+  kind: Service
+  namespace: kube-system
+{{- end }}
