--- a/cluster/manifests/kube-node-ready/daemonset.yaml
+++ b/cluster/manifests/kube-node-ready/daemonset.yaml
@@ -1,3 +1,4 @@
+# {{ if eq .Cluster.ConfigItems.kube_node_ready_enabled "true" }}
 # {{ $image := "container-registry.zalando.net/teapot/kube-node-ready:master-34" }}
 # {{ $version := index (split $image ":") 1 }}
 
@@ -65,3 +66,4 @@ spec:
           runAsUser: 1000
       securityContext:
         fsGroup: 65534
+# {{ end }}
