--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -484,6 +484,9 @@ kubernetes_lifecycle_metrics_mem_min: "120Mi"
 kube_node_ready_controller_cpu: "50m"
 kube_node_ready_controller_memory: "200Mi"
 
+# Enable kube-node-ready ASG lifecycle hook feature.
+kube_node_ready_enabled: "true"
+
 # Enable deployment of aws-cloud-controller-manager
 aws_cloud_controller_manager_enabled: "true"
 aws_cloud_controller_manager_cpu: "125m"
