--- a/cluster/manifests/kube-node-ready/service.yaml
+++ b/cluster/manifests/kube-node-ready/service.yaml
@@ -1,3 +1,4 @@
+# {{ if eq .Cluster.ConfigItems.kube_node_ready_enabled "true" }}
 kind: Service
 apiVersion: v1
 metadata:
@@ -16,3 +17,4 @@ spec:
       protocol: TCP
   selector:
     component: kube-node-ready
+# {{ end }}
