Set AWS_DEFAULT_REGION for kube2iam
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/cluster/manifests/kube2iam/daemonset.yaml
+++ b/cluster/manifests/kube2iam/daemonset.yaml
@@ -45,6 +45,8 @@ spec:
         - --verbose
         - --node=$(NODE_NAME)
         env:
+        - name: AWS_DEFAULT_REGION
+          value: "{{.Cluster.Region}}"
         - name: NODE_NAME
           valueFrom:
             fieldRef:
